2009-09-06 Eugene Hlyzov  <hlyzov@gmail.com>
	fix bug with nil association
	fix bug with wrong label
	add tests for fixed bugs