@@ -37,24 +37,27 @@ module Tequila
             build_hash_with_context(node, elementary_context)
           end
         }
-      elsif context.nil?
-        {}
       elsif @tree[node]
-        bounded_nodes = {}
-        { node.label.singularize =>
-          node.apply(context).merge(
+        node_value = node.apply(context).merge(
           @tree[node].inject({}) do |out, n|
-            if n.bounded?
-              out.merge(build_hash_with_context(n, n.content.call(context)).values.first)
+            new_context = n.content.call(context)
+            if new_context.nil?
+              out
             else
-              out.merge(build_hash_with_context(n, n.content.call(context)))
+              if n.bounded?
+                out.merge(build_hash_with_context(n, new_context).values.first)
+              else
+                out.merge(build_hash_with_context(n, new_context))
+              end
             end
           end)
-        }.merge(bounded_nodes)
+        node.suppress_label ?
+          node_value :
+          { node.label.singularize => node_value }
       else
-        { node.label.singularize =>
-          node.apply(context)
-        }
+        node.suppress_label ?
+          node.apply(context) :
+          { node.label.singularize => node.apply(context) }
       end
     end
 
@@ -74,6 +77,7 @@ module Tequila
     attr_accessor :attributes
     attr_accessor :code_blocks
     attr_accessor :label
+    attr_accessor :suppress_label
     attr_reader :name
     attr_reader :content
     attr_reader :type
@@ -139,6 +143,7 @@ module Tequila
       @methods = []
       @attributes = { :only => [], :except => []}
       @code_blocks = []
+      @suppress_label = false
     end
 
     def eval(vars)
